--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel Explorer - Discover the World's Hidden Wonders</title>
+    <title>Chesse</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <h1>Travel Explorer</h1>
+                    <h1>Chesse</h1>
                 </div>
                 <nav class="nav-menu" id="navMenu">
                     <ul>
@@ -51,11 +51,9 @@
             <div class="container">
                 <div class="hero-content">
                     <div class="hero-text">
-                        <h1 class="hero-title">Discover the World's Hidden Wonders</h1>
+                        <h1 class="hero-title">Chesse</h1>
                         <p class="hero-description">
-                            Embark on extraordinary journeys to breathtaking destinations that few have explored.
-                            From remote mountain villages to pristine tropical paradises, uncover the stories
-                            that make each place uniquely magical.
+                          ¡Descubre nuestra aplicacion  ChesseLuv creada para conocer personas con tus mismos gustos y diviértete con ellas! 
                         </p>
                         <button class="cta-button">Plan Your Trip</button>
                     </div>
