--- a/index.html
+++ b/index.html
@@ -34,6 +34,31 @@
                             <path d="21 21L16.65 16.65" stroke="currentColor" stroke-width="2" />
                         </svg>
                     </button>
+                    <button class="theme-toggle-btn" id="themeToggle" aria-label="Toggle Dark Mode">
+                        <!-- Moon Icon (for light mode) -->
+                        <svg class="moon-icon" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" stroke="currentColor"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                        <!-- Sun Icon (for dark mode - initially hidden) -->
+                        <svg class="sun-icon" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            xmlns="http://www.w3.org/2000/svg" style="display: none;">
+                            <circle cx="12" cy="12" r="5" stroke="currentColor" stroke-width="2" />
+                            <path d="M12 1V3" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                            <path d="M12 21V23" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                            <path d="M4.22 4.22L5.64 5.64" stroke="currentColor" stroke-width="2"
+                                stroke-linecap="round" />
+                            <path d="M18.36 18.36L19.78 19.78" stroke="currentColor" stroke-width="2"
+                                stroke-linecap="round" />
+                            <path d="M1 12H3" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                            <path d="M21 12H23" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                            <path d="M4.22 19.78L5.64 18.36" stroke="currentColor" stroke-width="2"
+                                stroke-linecap="round" />
+                            <path d="M18.36 5.64L19.78 4.22" stroke="currentColor" stroke-width="2"
+                                stroke-linecap="round" />
+                        </svg>
+                    </button>
                     <button class="sign-in-btn">Sign In</button>
                     <button class="mobile-menu-btn" id="mobileMenuBtn" aria-label="Toggle menu">
                         <span></span>
@@ -50,10 +75,13 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
+                    <div class="hero-image">
+                    </div>
                     <div class="hero-text">
                         <h1 class="hero-title">Chesse</h1>
                         <p class="hero-description">
-                          ¡Descubre nuestra aplicacion  Chesse creada para conocer personas con tus mismos gustos y diviértete con ellas! 
+                            ¡Descubre nuestra aplicacion Chesse creada para conocer personas con tus mismos gustos y
+                            diviértete con ellas!
                         </p>
                         <button class="cta-button">Descargala Aquí</button>
                     </div>
