agregacion de ftos y moviles

--- a/index.html
+++ b/index.html
@@ -133,22 +133,28 @@
             <div class="phone-placeholder">
                 <div class="notch"></div>
                 <div class="screen-placeholder">
-                    <span>Perfil de Usuario</span>
+                    <img src="/assets/fotoPerfil.jpg" alt="">
                 </div>
             </div>
             <div class="phone-placeholder">
                 <div class="notch"></div>
                 <div class="screen-placeholder">
-                    <span>Pantalla de Radar</span>
+                    <img src="/assets/Radar.jpg" alt="">
                 </div>
             </div>
             <div class="phone-placeholder">
                 <div class="notch"></div>
                 <div class="screen-placeholder">
-                    <span>Chat Privado</span>
+                    <img src="/assets/chatrPrivado.jpg" alt="">
                 </div>
             </div>
         </div>
+          <div class="phone-placeholder">
+                <div class="notch"></div>
+                <div class="screen-placeholder">
+                    <img src="/assets/match.jpg" alt="">
+                </div>
+            </div>
     </section>
 
     <!-- New Section: Premium CTA -->
