--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="phone-placeholder">
                 <div class="notch"></div>
                 <div class="screen-placeholder">
-                    <img src="/assets/match.jpg" alt="">
+                    <img src="assets/match.jpg" alt="">
                 </div>
             </div>
         </div>
