--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="phone-placeholder">
                 <div class="notch"></div>
                 <div class="screen-placeholder">
-                    <img src="assets/fotoPerfil.jpg" alt="">
+                    <img src="assets/Perfil.jpg" alt="">
                 </div>
             </div>
             <div class="phone-placeholder">
@@ -145,13 +145,27 @@
             <div class="phone-placeholder">
                 <div class="notch"></div>
                 <div class="screen-placeholder">
-                    <img src="assets/chatrPrivado.jpg" alt="">
+                    <img src="assets/MatchesPendientes.jpg" alt="">
                 </div>
             </div>
             <div class="phone-placeholder">
                 <div class="notch"></div>
                 <div class="screen-placeholder">
-                    <img src="assets/match.jpg" alt="">
+                    <img src="assets/EsMatch.jpg" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="phone-placeholder">
+                <div class="notch"></div>
+                <div class="screen-placeholder">
+                    <img src="assets/ChatConversacion.jpg" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="phone-placeholder">
+                <div class="notch"></div>
+                <div class="screen-placeholder">
+                    <img src="assets/Matches.jpg" alt="">
                 </div>
             </div>
         </div>
