--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheese - La App de Citas que te Derrite</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -128,45 +130,57 @@
     <!-- New Section: Gallery (Placeholders) -->
     <section class="gallery">
         <h2 class="section-title">Un vistazo a la App</h2>
-        <div class="carousel-container">
-            <button class="carousel-btn prev-btn">&lt;</button>
-            <div class="carousel-mask">
-                <div class="carousel-track">
-                    <div class="carousel-slide">
+        <div id="cheeseCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="d-flex justify-content-center">
                         <div class="phone-placeholder">
                             <div class="notch"></div>
                             <div class="screen-placeholder">
-                                <img src="assets/Perfil.jpg" alt="Perfil">
+                                <img src="assets/Perfil.jpg" class="d-block w-100" alt="Perfil">
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-slide">
+                </div>
+                <div class="carousel-item">
+                    <div class="d-flex justify-content-center">
                         <div class="phone-placeholder">
                             <div class="notch"></div>
                             <div class="screen-placeholder">
-                                <img src="assets/Radar.jpg" alt="Radar">
+                                <img src="assets/Radar.jpg" class="d-block w-100" alt="Radar">
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-slide">
+                </div>
+                <div class="carousel-item">
+                    <div class="d-flex justify-content-center">
                         <div class="phone-placeholder">
                             <div class="notch"></div>
                             <div class="screen-placeholder">
-                                <img src="assets/EsMatch.jpg" alt="Es un Match">
+                                <img src="assets/EsMatch.jpg" class="d-block w-100" alt="Es un Match">
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-slide">
+                </div>
+                <div class="carousel-item">
+                    <div class="d-flex justify-content-center">
                         <div class="phone-placeholder">
                             <div class="notch"></div>
                             <div class="screen-placeholder">
-                                <img src="assets/ChatConversacion.jpg" alt="Chat">
+                                <img src="assets/ChatConversacion.jpg" class="d-block w-100" alt="Chat">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <button class="carousel-btn next-btn">&gt;</button>
+            <button class="carousel-control-prev" type="button" data-bs-target="#cheeseCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#cheeseCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
+            </button>
         </div>
     </section>
 
@@ -190,6 +204,10 @@
         <p>&copy; 2025 Cheese App. Todos los derechos reservados.</p>
     </footer>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 
