--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="#planes">Planes</a>
+                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#planesModal">Planes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#features">Funciones</a>
@@ -227,7 +227,8 @@
                 <h2>🧀 Cheese Gold</h2>
                 <p>Pásate al lado dorado. Likes ilimitados, ve a quién le gustas y rebobina si te equivocaste (todos
                     merecemos una segunda oportunidad).</p>
-                <button class="btn btn-primary rounded-pill px-5 py-3 fw-bold">Ver Planes</button>
+                <button class="btn btn-primary rounded-pill px-5 py-3 fw-bold" data-bs-toggle="modal"
+                    data-bs-target="#planesModal">Ver Planes</button>
             </div>
         </div>
     </section>
@@ -244,6 +245,23 @@
         <p>&copy; 2025 Cheese App. Todos los derechos reservados.</p>
     </footer>
 
+
+    <!-- Modal for Planes -->
+    <div class="modal fade" id="planesModal" tabindex="-1" aria-labelledby="planesModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
+            <div class="modal-content"
+                style="background-color: var(--bg-dark); border: 1px solid rgba(255, 255, 255, 0.1);">
+                <div class="modal-header border-bottom-0">
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                </div>
+                <div class="modal-body p-0">
+                    <iframe src="planes.html"
+                        style="width: 100%; height: 80vh; border: none; border-radius: 0 0 10px 10px;"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
