cambio de planes,  platinum

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <section id="planes" class="premium-promo py-5 text-center">
         <div class="container">
             <div class="premium-content">
-                <h2>🧀 Cheese Gold</h2>
+                <h2>🧀 Cheese Gold y Platinum</h2>
                 <p>Pásate al lado dorado. Likes ilimitados, ve a quién le gustas y rebobina si te equivocaste (todos
                     merecemos una segunda oportunidad).</p>
                 <button class="btn btn-primary rounded-pill px-5 py-3 fw-bold" data-bs-toggle="modal"
