cambio-de-estructura-de-carpetas

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top custom-navbar">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center gap-2" href="#">
-                <img src="assets/logo.png" alt="Cheese Logo" class="nav-logo" width="40" height="40">
+                <img src="img/logo.png" alt="Cheese Logo" class="nav-logo" width="40" height="40">
                 <span class="brand-name">Cheese</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -172,7 +172,7 @@
                         <div class="phone-placeholder">
                             <div class="notch"></div>
                             <div class="screen-placeholder">
-                                <img src="assets/Perfil.jpg" class="d-block w-100" alt="Perfil">
+                                <img src="img/Perfil.jpg" class="d-block w-100" alt="Perfil">
                             </div>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                         <div class="phone-placeholder">
                             <div class="notch"></div>
                             <div class="screen-placeholder">
-                                <img src="assets/Radar.jpg" class="d-block w-100" alt="Radar">
+                                <img src="img/Radar.jpg" class="d-block w-100" alt="Radar">
                             </div>
                         </div>
                     </div>
@@ -192,7 +192,7 @@
                         <div class="phone-placeholder">
                             <div class="notch"></div>
                             <div class="screen-placeholder">
-                                <img src="assets/EsMatch.jpg" class="d-block w-100" alt="Es un Match">
+                                <img src="img/EsMatch.jpg" class="d-block w-100" alt="Es un Match">
                             </div>
                         </div>
                     </div>
@@ -202,7 +202,7 @@
                         <div class="phone-placeholder">
                             <div class="notch"></div>
                             <div class="screen-placeholder">
-                                <img src="assets/ChatConversacion.jpg" class="d-block w-100" alt="Chat">
+                                <img src="img/ChatConversacion.jpg" class="d-block w-100" alt="Chat">
                             </div>
                         </div>
                     </div>
@@ -256,7 +256,7 @@
                         aria-label="Close"></button>
                 </div>
                 <div class="modal-body p-0">
-                    <iframe src="planes.html"
+                    <iframe src="pages/planes.html"
                         style="width: 100%; height: 80vh; border: none; border-radius: 0 0 10px 10px;"></iframe>
                 </div>
             </div>
