--- a/pages/planes.html
+++ b/pages/planes.html
@@ -11,55 +11,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700;900&display=swap" rel="stylesheet">
-    <style>
-        body {
-            background-color: var(--bg-dark);
-            color: var(--text-white);
-            padding: 20px;
-        }
 
-        .pricing-card {
-            background: var(--bg-card);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            padding: 2rem;
-            text-align: center;
-            transition: transform 0.3s;
-            height: 100%;
-        }
-
-        .pricing-card:hover {
-            transform: translateY(-5px);
-            border-color: var(--primary);
-        }
-
-        .price {
-            font-size: 2.5rem;
-            font-weight: 700;
-            color: var(--primary);
-            margin: 1rem 0;
-        }
-
-        .features-list {
-            list-style: none;
-            padding: 0;
-            margin: 2rem 0;
-            text-align: left;
-        }
-
-        .features-list li {
-            margin-bottom: 0.5rem;
-            color: var(--text-gray);
-        }
-
-        .features-list li::before {
-            content: "🧀";
-            margin-right: 10px;
-        }
-    </style>
 </head>
 
-<body>
+<body class="p-4">
     <div class="container">
         <h2 class="text-center mb-5" style="color: var(--primary);">Nuestros Planes</h2>
         <div class="row g-4 justify-content-center">
