--- a/pages/planes.html
+++ b/pages/planes.html
@@ -19,41 +19,57 @@
         <h2 class="text-center mb-5" style="color: var(--primary);">Nuestros Planes</h2>
         <div class="row g-4 justify-content-center">
             <div class="col-md-4">
-                <div class="pricing-card">
-                    <h3>Gratis</h3>
-                    <div class="price">0€</div>
-                    <ul class="features-list">
-                        <li>Perfiles limitados</li>
-                        <li>5 Super Cheese al día</li>
-                        <li>Chat con matches</li>
-                    </ul>
-                    <button class="btn btn-outline-light w-100 rounded-pill">Actual</button>
+                <div class="card h-100 border-0 shadow-sm bg-dark text-white"
+                    style="background-color: var(--bg-card) !important;">
+                    <div class="card-body p-4 d-flex flex-column">
+                        <h3 class="card-title text-center mb-3">Gratis</h3>
+                        <div class="price text-center display-4 fw-bold mb-4" style="color: var(--primary);">0€</div>
+                        <ul class="features-list list-unstyled mb-4 flex-grow-1">
+                            <li class="mb-2"><i class="bi bi-check2 text-primary me-2"></i>Perfiles limitados</li>
+                            <li class="mb-2"><i class="bi bi-check2 text-primary me-2"></i>5 Super Cheese al día</li>
+                            <li class="mb-2"><i class="bi bi-check2 text-primary me-2"></i>Chat con matches</li>
+                        </ul>
+                        <button class="btn btn-outline-light w-100 rounded-pill mt-auto">Actual</button>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="pricing-card">
-                    <h3>Gold</h3>
-                    <div class="price">14.99€<span style="font-size: 1rem; color: var(--text-gray);">/mes</span></div>
-                    <ul class="features-list">
-                        <li>Likes ilimitados</li>
-                        <li>Ver a quién le gustas</li>
-                        <li>Rebobinar (Rewind)</li>
-                        <li>10 Super Cheese al día</li>
-                    </ul>
-                    <button class="btn btn-primary w-100 rounded-pill">Elegir Gold</button>
+                <div class="card h-100 border-primary shadow bg-dark text-white"
+                    style="background-color: var(--bg-card) !important; border-width: 2px;">
+                    <div class="card-body p-4 d-flex flex-column">
+                        <div class="text-center mb-2"><span class="badge bg-primary text-dark">Más Popular</span></div>
+                        <h3 class="card-title text-center mb-3">Gold</h3>
+                        <div class="price text-center display-4 fw-bold mb-4" style="color: var(--primary);">14.99€<span
+                                class="fs-6 text-secondary">/mes</span></div>
+                        <ul class="features-list list-unstyled mb-4 flex-grow-1">
+                            <li class="mb-2"><i class="bi bi-check2-all text-primary me-2"></i>Likes ilimitados</li>
+                            <li class="mb-2"><i class="bi bi-check2-all text-primary me-2"></i>Ver a quién le gustas
+                            </li>
+                            <li class="mb-2"><i class="bi bi-check2-all text-primary me-2"></i>Rebobinar (Rewind)</li>
+                            <li class="mb-2"><i class="bi bi-check2-all text-primary me-2"></i>10 Super Cheese al día
+                            </li>
+                        </ul>
+                        <button class="btn btn-primary w-100 rounded-pill fw-bold mt-auto">Elegir Gold</button>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="pricing-card">
-                    <h3>Platinum</h3>
-                    <div class="price">39.99€<span style="font-size: 1rem; color: var(--text-gray);">/mes</span></div>
-                    <ul class="features-list">
-                        <li>Todo lo de Gold</li>
-                        <li>Mensaje antes de match</li>
-                        <li>Prioridad en likes</li>
-                        <li>Ver confirmación de lectura</li>
-                    </ul>
-                    <button class="btn btn-outline-primary w-100 rounded-pill">Elegir Platinum</button>
+                <div class="card h-100 border-0 shadow-sm bg-dark text-white"
+                    style="background-color: var(--bg-card) !important;">
+                    <div class="card-body p-4 d-flex flex-column">
+                        <h3 class="card-title text-center mb-3">Platinum</h3>
+                        <div class="price text-center display-4 fw-bold mb-4" style="color: var(--primary);">39.99€<span
+                                class="fs-6 text-secondary">/mes</span></div>
+                        <ul class="features-list list-unstyled mb-4 flex-grow-1">
+                            <li class="mb-2"><i class="bi bi-star-fill text-primary me-2"></i>Todo lo de Gold</li>
+                            <li class="mb-2"><i class="bi bi-star-fill text-primary me-2"></i>Mensaje antes de match
+                            </li>
+                            <li class="mb-2"><i class="bi bi-star-fill text-primary me-2"></i>Prioridad en likes</li>
+                            <li class="mb-2"><i class="bi bi-star-fill text-primary me-2"></i>Ver confirmación de
+                                lectura</li>
+                        </ul>
+                        <button class="btn btn-outline-primary w-100 rounded-pill mt-auto">Elegir Platinum</button>
+                    </div>
                 </div>
             </div>
         </div>
