--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         </div>
     </header>
 
-    <section id="features" class="features py-5">
-        <div class="container py-5">
+    <section id="features" class="features pt-5 pb-0">
+        <div class="container pt-5 pb-4">
             <div class="row align-items-center mb-5 feature-item">
                 <div class="col-md-6 d-flex justify-content-center mb-4 mb-md-0">
                     <div class="radar-container">
@@ -132,8 +132,8 @@
 
     <!-- New Section: How it Works -->
     <!-- New Section: How it Works -->
-    <section class="how-it-works py-5 bg-dark">
-        <div class="container py-5">
+    <section class="how-it-works pt-5 pb-0 bg-dark">
+        <div class="container pb-3">
             <h2 class="section-title text-center text-white mb-5">¿Cómo funciona?</h2>
             <div class="row g-4 text-center">
                 <div class="col-md-4">
@@ -165,6 +165,13 @@
     <!-- New Section: Gallery (Placeholders) -->
     <section class="gallery">
         <h2 class="section-title">Un vistazo a la App</h2>
+        <div class="gallery-deco d-none d-lg-flex flex-column align-items-center gap-4">
+            <span class="deco-emoji">🧀</span>
+            <span class="deco-emoji">✨</span>
+            <div class="heart-pulse">❤️</div>
+            <span class="deco-emoji">🍷</span>
+            <span class="deco-emoji">🔥</span>
+        </div>
         <div id="cheeseCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
