--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#features">Funciones</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/contacto.html">Contáctanos</a>
+                    </li>
                     <li class="nav-item ms-lg-3">
                         <a href="#download" class="btn btn-primary rounded-pill px-4">Descargar</a>
                     </li>
