--- a/pages/planes.html
+++ b/pages/planes.html
@@ -19,7 +19,7 @@
         <h2 class="text-center mb-5" style="color: var(--primary);">Nuestros Planes</h2>
         <div class="row g-4 justify-content-center">
             <div class="col-md-4">
-                <div class="card h-100 border-0 shadow-sm bg-dark text-white"
+                <div class="card h-100 border-0 shadow-sm bg-dark text-white plan-card"
                     style="background-color: var(--bg-card) !important;">
                     <div class="card-body p-4 d-flex flex-column">
                         <h3 class="card-title text-center mb-3">Gratis</h3>
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card h-100 border-primary shadow bg-dark text-white"
+                <div class="card h-100 shadow bg-dark text-white plan-card"
                     style="background-color: var(--bg-card) !important; border-width: 2px;">
                     <div class="card-body p-4 d-flex flex-column">
                         <div class="text-center mb-2"><span class="badge bg-primary text-dark">Más Popular</span></div>
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card h-100 border-0 shadow-sm bg-dark text-white"
+                <div class="card h-100 border-0 shadow-sm bg-dark text-white plan-card"
                     style="background-color: var(--bg-card) !important;">
                     <div class="card-body p-4 d-flex flex-column">
                         <h3 class="card-title text-center mb-3">Platinum</h3>
