--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <div class="phone-placeholder">
                             <div class="notch"></div>
                             <div class="screen-placeholder">
-                                <img src="img/Perfil.jpg" class="d-block w-100" alt="Perfil">
+                                <img src="img/perfilsofia.png" class="d-block w-100" alt="Perfil">
                             </div>
                         </div>
                     </div>
@@ -192,7 +192,7 @@
                         <div class="phone-placeholder">
                             <div class="notch"></div>
                             <div class="screen-placeholder">
-                                <img src="img/Radar.jpg" class="d-block w-100" alt="Radar">
+                                <img src="img/radarsofia.png" class="d-block w-100" alt="Radar">
                             </div>
                         </div>
                     </div>
@@ -202,7 +202,7 @@
                         <div class="phone-placeholder">
                             <div class="notch"></div>
                             <div class="screen-placeholder">
-                                <img src="img/EsMatch.jpg" class="d-block w-100" alt="Es un Match">
+                                <img src="img/matchsofia.png" class="d-block w-100" alt="Es un Match">
                             </div>
                         </div>
                     </div>
@@ -212,7 +212,7 @@
                         <div class="phone-placeholder">
                             <div class="notch"></div>
                             <div class="screen-placeholder">
-                                <img src="img/ChatConversacion.jpg" class="d-block w-100" alt="Chat">
+                                <img src="img/sofia.png" class="d-block w-100" alt="Chat">
                             </div>
                         </div>
                     </div>
