--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,8 +18,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top custom-navbar">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
-                <img src="../img/logo.png" alt="Cheese Logo" class="nav-logo" width="40" height="40"
-                    onerror="this.replaceWith('🧀')">
+                <img src="../img/logo2.png" alt="Cheese Logo" class="nav-logo" width="40" height="40">
                 <span class="brand-name">Cheese</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -29,7 +28,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Inicio</a>
+                        <a class="nav-link" href="../index.html#planes">Planes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html#features">Funciones</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contáctanos</a>
+                    </li>
+                    <li class="nav-item ms-lg-3">
+                        <a href="../index.html#download" class="btn btn-primary rounded-pill px-4">Descargar</a>
                     </li>
                 </ul>
             </div>
