cambio-de-funciones

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                         <span class="highlight-soulmate">media naranja...</span>
                         <span class="text-white">o tu queso derretido</span>
                     </h1>
-                    <p class="lead text-secondary mb-5">La app de citas más <strong>cremosa</strong>. Radar, Matches y
+                    <p class="lead text-secondary mb-5 mx-auto mx-xl-0">La app de citas más <strong>cremosa</strong>.
+                        Radar, Matches y
                         cero tonterías. ¿Listo para el <em>match</em> perfecto?</p>
 
                     <div class="d-flex justify-content-center justify-content-xl-start gap-4">
@@ -74,7 +75,8 @@
                     </div>
                 </div>
 
-                <div class="col-xl-6 position-relative hero-visual d-flex justify-content-center">
+                <div
+                    class="col-xl-6 position-relative hero-visual d-flex justify-content-center align-items-center mt-4 mt-xl-0">
                     <div class="phone-mockup">
                         <!-- Placeholder for App Screen using CSS -->
                         <div class="screen-content map-screen">
@@ -105,8 +107,8 @@
 
     <section id="features" class="features pt-5 pb-0">
         <div class="container pt-5 pb-4">
-            <div class="row align-items-center mb-5 feature-item">
-                <div class="col-md-6 d-flex justify-content-center mb-4 mb-md-0">
+            <div class="row align-items-center mb-5 py-5 feature-item">
+                <div class="col-xl-6 d-flex justify-content-center mb-4 mb-xl-0">
                     <div class="radar-container">
                         <div class="radar-circles">
                             <span></span>
@@ -121,22 +123,22 @@
                         <div class="user-center"></div>
                     </div>
                 </div>
-                <div class="col-md-6 text-center text-md-start">
+                <div class="col-xl-6 text-center text-xl-start">
                     <h2>Radar del Amor 📡</h2>
                     <p class="lead text-secondary">Define tu radio en kilómetros y mira quién está cerca en tiempo real.
                         ¡El amor puede estar a la vuelta de la esquina!</p>
                 </div>
             </div>
 
-            <div class="row align-items-center feature-item reverse">
-                <div class="col-md-6 order-md-2 d-flex justify-content-center mb-4 mb-md-0">
-                    <div class="mock-chat">
+            <div class="row align-items-center py-5 feature-item reverse">
+                <div class="col-xl-6 order-xl-2 d-flex justify-content-center mb-4 mb-xl-0">
+                    <div class="mock-chat d-flex flex-column gap-3">
                         <div class="bubble received">Hola! Vi que te gusta el queso 🧀</div>
                         <div class="bubble sent">Me encanta! Cuándo vamos por una pizza? 🍕</div>
                         <div class="bubble received">Jaja me parece un planazo</div>
                     </div>
                 </div>
-                <div class="col-md-6 order-md-1 text-center text-md-start">
+                <div class="col-xl-6 order-xl-1 text-center text-xl-start">
                     <h2>Chat al Instante 💬</h2>
                     <p class="lead text-secondary">Si hay match, la conversación fluye. Sin esperas, directo al grano y
                         con gifs de gatitos si quieres.</p>
@@ -153,7 +155,7 @@
             <div class="row g-4 text-center">
                 <div class="col-md-4">
                     <div class="step-card h-100 p-4">
-                        <div class="step-icon">1</div>
+                        <div class="step-icon d-flex align-items-center justify-content-center">1</div>
                         <h3>Crea tu Perfil</h3>
                         <p>Sube tus mejores fotos (sí, esa con tu perro cuenta) y dinos qué tipo de queso... digo,
                             persona buscas.</p>
@@ -161,14 +163,14 @@
                 </div>
                 <div class="col-md-4">
                     <div class="step-card h-100 p-4">
-                        <div class="step-icon">2</div>
+                        <div class="step-icon d-flex align-items-center justify-content-center">2</div>
                         <h3>Activa el Radar</h3>
                         <p>Ajusta la distancia. ¿Buscas amor en tu barrio o aventura en la ciudad de al lado?</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="step-card h-100 p-4">
-                        <div class="step-icon">3</div>
+                        <div class="step-icon d-flex align-items-center justify-content-center">3</div>
                         <h3>Match & Chatea</h3>
                         <p>Dale like a quien te guste. Si es recíproco, ¡es hora de romper el hielo!</p>
                     </div>
