--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html#planes">Planes</a>
+                        <a class="nav-link" href="../pages/planes.html">Planes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html#features">Funciones</a>
